Fix padding on small screens for search field.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -799,7 +799,7 @@ blockquote cite {
 }
 
 .search-widgets{
-    padding-top: 80px;
+    padding-top: 80px !important;
 }
 
 .getting-started{
